--- a/server/.env
+++ b/server/.env
@@ -7,4 +7,4 @@ PORT= 8080
 CLOUD_NAME = dsvotvxhq
 API_KEY = 886837389255772
 API_SECRET = aW_hpmUewFUAoQmLvfhaI7Aw12M
-FOLDER_NAME = "INEXT"
+FOLDER_NAME = "INEXT - NEWS"
