--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 JWT_SECRET = j5111d0f0sdfdfd00f0df
-MONGODB_URL= mongodb+srv://infoinextets:VWi8V6YTnxIgESpW@cluster0.3doac7y.mongodb.net/OIL
+MONGODB_URL= mongodb+srv://infoinextets:VWi8V6YTnxIgESpW@cluster0.3doac7y.mongodb.net/News
 
 PORT= 8080
 
