--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-youtube": "^10.1.0",
     "sweetalert2": "^11.12.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
