--- a/client/package.json
+++ b/client/package.json
@@ -4,22 +4,28 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@sayings/react-reels": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
+    "install": "^0.13.0",
+    "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-smooth-scrollbar": "^8.0.6",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
+    "reel-js": "^0.1.1",
     "sweetalert2": "^11.12.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
