--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,16 @@ CLOUD_NAME = dsvotvxhq
 API_KEY = 886837389255772
 API_SECRET = aW_hpmUewFUAoQmLvfhaI7Aw12M
 FOLDER_NAME = "INEXT - NEWS"
+
+
+
+
+
+
+MAIL_HOST= smtp.gmail.com
+
+# Username of the email account used for sending emails
+MAIL_USER= vikashumathofficial@gmail.com
+
+# Password of the email account used for sending emails
+MAIL_PASS= sofn lsyy fdpj egcj
