--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,12 @@
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
