--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-otp-input": "^3.1.1",
+    "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
