--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "otp-generator": "^4.0.1"
   },
   "name": "server",
   "version": "1.0.0",
