--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
+    "hls.js": "^1.5.13",
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "react": "^18.3.1",
@@ -27,6 +28,8 @@
     "react-youtube": "^10.1.0",
     "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4",
+    "video.js": "^8.17.1",
+    "videojs-contrib-hls": "^5.15.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
